clusters/main/kubernetes/apps/dockerregistry/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dockerregistry
  namespace: dockerregistry
  annotations:
    gethomepage.dev/enabled: "true"
    #gethomepage.dev/description: Endpoint monitoring
    gethomepage.dev/group: Default
    gethomepage.dev/icon: https://trueforge.org/img/hotlink-ok/chart-icons/dockerregistry.webp
    gethomepage.dev/name: Dockerregistry
    gethomepage.dev/instance: "internal"
spec:
  parentRefs:
    - name: envoy-internal
      namespace: envoy
      sectionName: https
  hostnames:
    - "dockerregistry.${INGRESS_URL}"
  rules:
    - backendRefs:
        - name: dockerregistry
          port: 5000
